--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       # - name: fetch submodules
       - name: install lib deps
         run: |
-          apt-get -qq update && apt-get -qy install liblua5.4-dev libpipewire-0.3-dev
+          sudo apt-get -qq update && sudo apt-get -qy install liblua5.4-dev libpipewire-0.3-dev
       - name: build
         run: |
           cd lib/ziglua && /opt/zig/zig build
