--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,9 @@ jobs:
           wget https://ziglang.org/builds/zig-linux-x86_64-0.11.0-dev.3971+6bc9c4f71.tar.xz
           tar -xf zig-linux-x86_64-0.11.0-dev.3971+6bc9c4f71.tar.xz -C /opt/zig
           ls /opt/zig
+      - name: install lib deps
+        run: |
+          ls /opt/zig
       # - name: install os deps
       #   run: |
       #     apt-get -qq update && apt-get -qy install fakeroot
