--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,15 +16,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
+      - name: show submodules
+        run: |
+          ls lib/
       - name: download & install zig
         run: |
           mkdir /opt/zig
           wget https://ziglang.org/builds/zig-linux-x86_64-0.11.0-dev.3971+6bc9c4f71.tar.xz
           tar -xf zig-linux-x86_64-0.11.0-dev.3971+6bc9c4f71.tar.xz -C /tmp
           cp -R /tmp/zig-linux-x86_64-0.11.0-dev.3971+6bc9c4f71/* /opt/zig
-      - name: show zig install dir
-        run: |
-          ls /opt/zig
       # - name: install os deps
       #   run: |
       #     apt-get -qq update && apt-get -qy install fakeroot
