--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           submodules: 'true'
       - name: show submodules
         run: |
-          ls lib/lib/ziglua
+          ls lib/ziglua
       - name: download & install zig
         run: |
           mkdir /opt/zig
