--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,8 @@ jobs:
             ./*.tar.gz
       - name: Release
         uses: softprops/action-gh-release@v1
-        # if: ${{ github.event.release.tag_name }}
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: ${{ github.ref_name }}
-          # draft: true
+          draft: true
           files: ./*.tar.gz
