--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,3 +44,20 @@ jobs:
           name: macos-x86_64-${{ github.ref_name }}
           path: |
             ./*.zip
+  release:
+    needs: |
+      linux-x86_64
+      macos-x86_64
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          path: .
+      - uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          draft: true
+          files: |
+            ./*.zip
+            ./*.tar.gz
