--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
-        with:
-          path: .
       - uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           draft: true
           files: |
-            ./*.zip
-            ./*.tar.gz
+            ./macos-x86_64-${{ github.ref_name }}/*.zip
+            ./linux-x86_64-${{ github.ref_name }}*.tar.gz
