--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: install dependencies (homebrew)
         if: $${{ ! startsWith(matrix.os, 'ubuntu') }}
         run: |
-          brew install pkg-config lua notcurses
+          HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install pkg-config lua notcurses
       - name: build seamstress
         run: |
           zig build -Doptimize=ReleaseSafe --summary all
