feat: load modules lazily

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 *.*~
 \#*.*\#
-c4che/
-build/
-__pycache__/
-.waf*
-.lock-waf*
-.cache/
 config.log
-zig-cache/
+.zig-cache/
 zig-out/
-lua/core/.DS_Store
-lua/.DS_Store
-lua/lib/.DS_Store
+*.DS_Store
